RestaurantController unit tests implemented